--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,19 @@
-
+<doctype html!>
+  <html>
+  <head>
+    <title>Sukhmanvirk</title>
+    <style>
+    .Sukhman{
+      height:200px;
+      width:200px;
+      background-color:black;
+      border:4px solid black;
+      border-radius:12px;
+      }
+    </style>
+    </head>
+    <body>
+    <div class="Sukhman">
+      </div>
+    </body>
+  </html>
